# mfcc-implementation

./: CMakeLists.txt  mfcc_module.py  setup.py
build_riscv/: CMakeCache.txt  Makefile  cmake_install.cmake  test_mfcc
docs/: progress_report.md
include/: mfcc.h  mfcc_cffi_wrapper.h
mfcc.egg-info/: PKG-INFO  SOURCES.txt
src/: mfcc.c  mfcc_cffi_wrapper.c  mfcc_wrapper.c
tests/: generate_test_audio.py  test_mfcc.c  verify_mfcc.py
